--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,30 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        dev {
+            applicationId = defaultConfig.applicationId + "dev"
+            manifestPlaceholders = [app_name: "CUBC " + name]
+        }
+        ut {
+            applicationId = defaultConfig.applicationId + "ut"
+            manifestPlaceholders = [app_name: "CUBC " + name]
+        }
+        stg {
+            applicationId = defaultConfig.applicationId + "stg"
+            manifestPlaceholders = [app_name: "CUBC " + name]
+        }
+        uat {
+            applicationId = defaultConfig.applicationId + "uat"
+            manifestPlaceholders = [app_name: "CUBC " + name]
+        }
+        production {
+            applicationId = defaultConfig.applicationId
+            manifestPlaceholders = [app_name: "CUBC mBanking"]
+        }
+    }
+    flavorDimensions "dev"
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -64,6 +88,12 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
     implementation("androidx.navigation:navigation-compose:2.5.1")
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // retrofit http logging
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
